Bug 45183 - FILEOPEN - broken layout of rtf document
Summary: FILEOPEN - broken layout of rtf document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta3
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: bibisected35 target:4.1.0 target:4.0.0.1
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-01-24 09:14 UTC by Pavel Kysilka
Modified: 2019-01-07 17:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document. (15.18 KB, application/bzip2)
2012-01-24 09:21 UTC, Pavel Kysilka
Details
This file Printed as PDF with LO 3.3.4 and MS Word (85.54 KB, application/x-7z-compressed)
2012-12-29 19:04 UTC, s-joyemusequna
Details
Screenshot of MS Word and LOdev 4.0 Beta+ (74.50 KB, text/plain)
2012-12-29 19:10 UTC, s-joyemusequna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Kysilka 2012-01-24 09:14:35 UTC
Document has broken layout. Look at the attached document.
Comment 1 Pavel Kysilka 2012-01-24 09:21:19 UTC
Created attachment 56092 [details]
Sample document.
Comment 2 Mikeyy - L10n HR 2012-01-25 00:56:52 UTC
Windows XP, 3.4.5
Have same problem, can suplly the file but not publicly.

Best regards,
Mikeyy
Comment 3 s-joyemusequna 2012-01-25 08:30:04 UTC
Document can be opened with Word 2003 and 2007 without problems (Win XP, Win Vista 64).

Document has broken layout with LibO 3.4.4, LibO 3.4.4 crashes when trying to close it (Windows Vista 64).

Document has broken layout with LibO 3.5 RC1 (table is cut into parts etc.)
Comment 4 Mikeyy - L10n HR 2012-02-20 05:50:23 UTC
Same document that was broken with 3.4.5, now are unable to open with 3.5.
So it's not broken layout any more, can't open it at all now.
Comment 5 s-joyemusequna 2012-02-22 09:55:37 UTC
Tested with LibO 3.3.4 on Windows XP. Document is displayed much better. There are partly problems with word wrap in nested tables and the green bar (text background) is slightly mispositionned and the color should be pale green, but otherwise it seems OK.

This is a regression.
Comment 6 Jean-Baptiste Faure 2012-03-21 06:17:28 UTC
Reproducible with LO 3.5.3rc0+ under Ubuntu 11.10 x86_64
When opening the bugdoc I get the following error message :
.../lo35/writerfilter/source/dmapper/GraphicImport.cxx:1486 failed. Message :GraphicCrop

Best regards. JBF
Comment 7 Robinson Tryon (qubit) 2012-07-03 22:25:08 UTC
I ran bibisect for 3.5 on the file. The layout had problems on both the oldest and the latest builds, but the output was VERY different between the two.

My guess is that there are a number of RTF bugs present: some that predate 3.5, and some that may have shown up during development. Basically this is like a big Gordian Knot.

Could you please attach an image/PDF of what the document is supposed to look like? That way we'll at least have the expected output on file.
Comment 8 Michael Meeks 2012-12-18 16:10:01 UTC
The document is three pages for me in MS word, with a form, and a strip / watermark of light-green down the center. In LibreOffice it is 534 pages of somewhat mangled junk ;-)

Looks like a rather old regression. Interestingly it loads as three (mangled) pages when exported as .docx, and as one reasonably attractive page when loaded as binary .doc - which points to a nest of badness somewhere I guess.
Comment 9 Not Assigned 2012-12-27 12:36:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6cac123a8de8357cf11d9b5f818233889d729939

fdo#45183 import RTF_SHPFBLWTXT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Miklos Vajna 2012-12-27 12:37:37 UTC
First obvious problem is that the water mark wasn't in background, the above commit should fix that. Now 534 pages is down to 44, which is nice, but still not 3, I suspect some table width issue here.
Comment 11 s-joyemusequna 2012-12-27 18:01:32 UTC
CRASH when loading the file with LOdev 4.0 Beta1 and Beta2 under Windows XP and Vista 64: "General Error.
General input/output error."
Comment 12 Miklos Vajna 2012-12-27 22:32:12 UTC
Not sure what's going on, just downloaded LibO-Dev_4.0.0.0.beta2_Linux_x86-64_install-rpm_en-US and while the result is buggy, I don't get any crash here. Probably unrelated to the regression.
Comment 13 Not Assigned 2012-12-28 12:11:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c3b0f13546b30e5db3aecd311c7178e4e0933208

fdo#45183 fix RTF import of tables with different row widths



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Not Assigned 2012-12-28 12:48:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d7223549a5ee1b7900b6db33c116ababd8db63e8&h=libreoffice-4-0

fdo#45183 import RTF_SHPFBLWTXT


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Not Assigned 2012-12-28 12:48:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d7287f8d7984eae98a577f60a8bc0a740fc5e9e&h=libreoffice-4-0

fdo#45183 fix RTF import of tables with different row widths


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Miklos Vajna 2012-12-28 13:40:46 UTC
Fixed in master and -4-0, marking as resolved. I considered backporting these fixes to -3-6, but other watermark-related fixes (in Writer core) aren't backported to -3-6, either, so just backporting these makes little sense.

Also, the document is still not perfect (it's imported as 5 pages, for example), but I just checked this wasn't perfect in 3.4, either -- so let's handle the remaining problems in a separate non-regression bug, if necessary.
Comment 17 s-joyemusequna 2012-12-29 19:04:50 UTC
Created attachment 72271 [details]
This file Printed as PDF with LO 3.3.4 and MS Word

It used to work with LO 3.3.4 (3 pages, table nearly perfect), see Comment 5, so it still is a regression.

Now it looks much better than in LO 3.4.5, but the problem is that the cells are misplaced, is logic of the form is not there - it is impossible to fill in the form.
Comment 18 s-joyemusequna 2012-12-29 19:10:02 UTC
Created attachment 72273 [details]
Screenshot of MS Word and LOdev 4.0 Beta+

This screenshot demonstrates that it is impossible to fill in the form as the boxes are wrongly positionned. I reopen therefore the bug.
Comment 19 Michael Meeks 2012-12-31 22:43:45 UTC
Sigh; one of the -very- best ways to irritate and de-motivate developers is to file a bug that is really a dozen issues, and then to re-open it constantly. This makes it -very- hard to gague any progress on the issue, makes the bug itself increasingly difficult and time consuming to read to work out what the real issue is (particularly when the title doesn't change) - it screws up the git commit referencing of bugs, so it is hard to work out what each fix was in future and worse :-) probably that is not obvious to bug filers of course - but ... it is how it is :-)

If a single document displays multiple problems -please- file multiple (related) bug reports, perhaps with a tracking bug - for each of the issues.

I'd ask you to re-close this bug, and do that for the remaining issues in your document, each with a suitable title etc.

Thanks !
Comment 20 Robinson Tryon (qubit) 2015-12-15 11:55:07 UTC Comment hidden (obsolete)
Comment 21 vihsa 2017-06-03 06:39:03 UTC
per comment 16, verified, hence status change.

Version: 5.5.0.0.alpha0+
Build ID: 066665644b398a882e6cded98af5bb060af41d76
TinderBox: Android-ARM@24-Bytemark-Hosting, Branch: Master, Time: 2017-06-01 00:30:43