fdo#45183 import RTF_SHPFBLWTXT